# assignments

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python_ci.yml
assignment_0/: README.md
life_expectancy/: cleaning.py  countries.py  data_fixture_create_script.py  data_io.py  full_orchestration.py
life_expectancy/data/: pt_life_expectancy.csv
life_expectancy/tests/: conftest.py  test_cleaning.py  test_pyproject.py
life_expectancy/tests/fixtures/: eu_life_expectancy_raw.tsv
