[project]
name = "life_expectancy"
version = "0.1.0"
description = "First assignment of the Foundations Learning Path"
authors = [
    {name = "Diogo Aguiar<diogo.aguiar@nos.pt>"}
]

readme = "README.md"
requires-python = ">=3.8"

dependencies = ["requests", "pandas==2.3.3"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "pylint", "pytest-cov", "toml"]

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80

[tool.setuptools]
packages = ["life_expectancy"]

[tool.pylint."message_control"]
disable = [
    "trailing-whitespace",
    "missing-function-docstring",
    "invalid-name",
    "trailing-newlines",
    "missing-final-newline",
    "no-else-return"
]